#pragma once

namespace safecrowd::engine {

enum class TriggerPolicy {
    EveryFrame,
    FixedStep,
    Interval,
};

}  // namespace safecrowd::engine
