@startuml safecrowd-engine-runtime-core
title SafeCrowd Engine Runtime Core

top to bottom direction
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype ortho

package "engine::api" {
  class EngineRuntime {
    +initialize()
    +play()
    +pause()
    +stop()
    +stepFrame()
    +world()
    +stats()
  }

  class EngineWorld {
    +query(): WorldQuery
    +resources(): WorldResources
    +commands(): WorldCommands
  }

  class WorldQuery {
    +view<T...>()
    +contains<T>(entity: Entity): bool
    +get<T>(entity: Entity): T&
    -WorldQuery(core: EcsCore&)
  }

  class WorldResources {
    +set<T>()
    +get<T>(): T&
    +contains<T>(): bool
  }

  class WorldCommands {
    +createEntity(): Entity
    +destroyEntity(entity: Entity)
    +add<T>(entity: Entity, component: T)
    +remove<T>(entity: Entity)
  }

  interface EngineSystem {
    +configure(world: EngineWorld)
    +update(world: EngineWorld, step: EngineStepContext)
  }

  class SystemDescriptor {
    +phase
    +order
    +triggerPolicy
    +intervalTicks
    +before
    +after
    +enabled
  }

  class EngineConfig {
    +fixedDeltaTime
    +maxCatchUpSteps
    +baseSeed
  }
  class EngineStats
  class EngineStepContext {
    +frameIndex
    +fixedStepIndex
    +alpha
    +runIndex
    +derivedSeed
  }

  enum UpdatePhase {
    Startup
    PreSimulation
    FixedSimulation
    PostSimulation
    RenderSync
  }

  enum TriggerPolicy {
    EveryFrame
    FixedStep
    Interval
  }

  interface IRenderBridge {
    +sync()
  }
}

package "engine::runtime" {
  class FrameClock {
    +beginFrame()
    +shouldRunFixedStep()
    +consumeFixedStep()
    +alpha()
  }

  class SystemScheduler {
    +registerSystem()
    +executePhase()
  }

  class ResourceStore {
    +set()
    +get()
    +contains()
  }

  class CommandBuffer {
    +createEntity()
    +destroyEntity()
    +addComponent()
    +removeComponent()
    +flush()
  }

  class DeterministicRng {
    +reseed(seed: uint64)
    +baseSeed(): uint64
    +derive(runIndex, fixedStepIndex): uint64
    +next(): uint64
  }

}

package "engine::ecs" {
  class EcsCore
}

EngineRuntime *-- EngineWorld
EngineRuntime *-- FrameClock
EngineRuntime *-- SystemScheduler
EngineRuntime *-- CommandBuffer
EngineRuntime *-- DeterministicRng
EngineRuntime o-- IRenderBridge
EngineRuntime --> EngineConfig
EngineRuntime --> EngineStats

EngineWorld *-- WorldQuery
EngineWorld *-- WorldResources
EngineWorld *-- WorldCommands
EngineWorld --> EcsCore : delegates

WorldQuery --> EcsCore : reads facade
WorldResources --> ResourceStore : delegates
WorldCommands --> CommandBuffer : enqueues deferred mutations

SystemScheduler --> EngineSystem
SystemScheduler --> SystemDescriptor
SystemScheduler --> EngineWorld : uses facade
SystemScheduler --> CommandBuffer : flushes at phase boundaries

CommandBuffer --> EcsCore : applies deferred mutations

note bottom of SystemScheduler
  Ordered phases, fixed-step execution, interval ticks,
  and before/after constraints live here.
  Runtime reaches world state through EngineWorld,
  not through raw ECS storage.
  Interval cadence state is reset when
  the runtime is initialized or stopped.
end note

note bottom of ResourceStore
  Domain fields such as density, visibility, flow,
  and dynamic cost live here as typed resources.
end note

note bottom of WorldCommands
  Mutation requests are recorded first.
  Systems do not mutate ECS storage immediately
  while iterating queries.
end note

note bottom of WorldQuery
  Runtime and systems access query capabilities
  through EngineWorld::query().
  Raw ECS-backed construction stays behind
  the engine facade boundary.
end note

note right of DeterministicRng
  Repeatable step seeds are derived from
  baseSeed, runIndex, and fixedStepIndex,
  then stored in EngineStepContext.
  The runtime reseeds it at initialize/stop
  boundaries before a new run begins.
end note

note right of EcsCore
  EntityRegistry
  ComponentRegistry
  PackedComponentStorage
end note

@enduml
